...
            android:layout_height="wrap_content"
            android:theme="@style/LoginRegistrInputTextStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgLogo">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
...

            </yargo.inc.login.utils_view.СustomEnterPasswordView>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/email_sign_in_button"
            style="@style/buttonMargins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/action_sign_in_account"
            app:layout_constraintEnd_toEndOf="parent"
...
